--- a/Styles/index.css
+++ b/Styles/index.css
@@ -6,7 +6,7 @@
 /* ============  Colors  ============ */
 
     /* Change favourite color */
-    --hue-color: 340; /*  Purple 250 - Green 142 - Blue 230 - Pink 340  */
+    --hue-color: 750; /*  Purple 250 - Green 142 - Blue 230 - Pink 340  */
 
     /* HSL Color Mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -868,13 +868,13 @@ img {
     color: var(--first-color-lighter);
 }
 .footer__copy {
-    font-size: var(--smaller-font-size);
+    font-size: var(--small-font-size);
     text-align: center;
-    color: var(--text-color-light);
+    color: var(--first-color-lighter);
     margin-top: var(--mb-3);
 }
 .footer__copy span{
-    font-size: var(--normal-font-size);
+    font-size: var(--h3-font-size);
 }
 .footer__title,
 .footer__subtitle,
