--- a/Assets/CSS/CSS.css
+++ b/Assets/CSS/CSS.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Poppins:wght@400;500;600&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=Clicker+Script&family=Poppins:wght@200;300;400;500;600&family=Sacramento&family=Sevillana&display=swap');
 
 :root {
     --header-height: 3rem;
@@ -6,7 +7,7 @@
 /* ============  Colors  ============ */
 
     /* Change favourite color */
-    --hue-color: 750; /*  Purple 250 - Green 142 - Blue 230 - Pink 340  */
+    --hue-color: 200; /*  Purple 250 - Green 142 - Blue 230 - Pink 340  */
 
     /* HSL Color Mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -201,7 +202,9 @@ img {
 }
 .nav__logo, .nav__toggle {
     color: var(--title-color);
-    font-weight: var(--font-medium);
+    font-weight: var(--font-semi-bold);
+    font-family: 'Sacramento', cursive;
+    font-size: var(--big-font-size);
 }
 .nav__logo:hover {
     color: var(--first-color);
@@ -221,12 +224,14 @@ img {
         left: 0;
         width: 100%;
         background-color: var(--body-color);
-        padding: 1.5rem 1.5rem 2.5rem;
+        padding: 2rem 1.5rem 4rem;
         box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
         border-radius: 1.5rem 1.5rem 0 0;
         transition: 0.3s ;
     }
+    
 }
+
 
 
 .nav__list {
@@ -245,7 +250,7 @@ img {
     color: var(--first-color);
 }
 .nav__icon {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 }
 .nav__close {
     position: absolute;
@@ -870,10 +875,11 @@ img {
 .footer__copy {
     font-size: var(--small-font-size);
     text-align: center;
-    color: var(--first-color-lighter);
+    color: var(--input-color);
     margin-top: var(--mb-3);
 }
 .footer__copy span{
+    color: var(--input-color);
     font-size: var(--h3-font-size);
 }
 .footer__title,
@@ -1134,7 +1140,7 @@ img {
         padding: 3rem 0 3.5rem;
     }
     .footer__links{
-        flex-direction: row;
+        flex-direction: column;
         column-gap: 2rem;
     }
     .footer__socials {
